--- a/data/sources/mlmu-brno.yaml
+++ b/data/sources/mlmu-brno.yaml
@@ -4969,14 +4969,9 @@ series:
         dtstart: 2022-04-19 16:00:00+02:00
         dtend: 2022-04-19 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jan 27, 6:00 PM  CET: Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning)
-
-
-        Abstract
-
-        Speech data is notoriously difficult to work'
-      og_title: 'MLMU Online #18: Voice processing revolution: The future is now!, Thu, Jan 27, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/machine-learning-meetup-brno/events/283360072/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'MLMU Online #18: Voice processing revolution: The future is now!'
         description: 'Machine Learning Meetup Brno
@@ -4987,23 +4982,20 @@ series:
           Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning) AbstractSpeech data is notorious...
 
 
-          https://www.meetup.com/Machine-Learning-Meetup-Brno/events/283360072/'
+          https://www.meetup.com/machine-learning-meetup-brno/events/283360072/'
         location: Online event
         geo:
           lat: 49.2
           lon: 16.61
         status: CONFIRMED
         uid: event_283360072@meetup.com
-        url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/283360072/
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/283360072/
         dtstart: 2022-01-27 18:00:00+01:00
         dtend: 2022-01-27 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jan 19, 6:00 PM  CET: DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism
-
-
-        We invite you to the online discussion AI as a New Frontier for Journalism: W'
-      og_title: D<AI>DALOS – AI as a New Frontier for Journalism, Wed, Jan 19, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/machine-learning-meetup-brno/events/283095380/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: D<AI>DALOS – AI as a New Frontier for Journalism
         description: 'Machine Learning Meetup Brno
@@ -5014,14 +5006,14 @@ series:
           DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism We invite you to the online discussion AI as a New Front...
 
 
-          https://www.meetup.com/Machine-Learning-Meetup-Brno/events/283095380/'
+          https://www.meetup.com/machine-learning-meetup-brno/events/283095380/'
         location: Online event
         geo:
           lat: 49.2
           lon: 16.61
         status: CONFIRMED
         uid: event_283095380@meetup.com
-        url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/283095380/
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/283095380/
         dtstart: 2022-01-19 18:00:00+01:00
         dtend: 2022-01-19 20:00:00+01:00
   - meetupcom:
@@ -7252,6 +7244,116 @@ series:
         status: CONFIRMED
         uid: event_282546299@meetup.com
         url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/282546299/
+        dtstart: 2021-12-14 18:00:00+01:00
+        dtend: 2021-12-14 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: D<AI>DALOS – Role of AI in Achieving The Sustainable Development Goals
+        description: 'Machine Learning Meetup Brno
+
+          Tuesday, April 19 at 4:00 PM
+
+
+          # DAIDALOS – The Role of AI in Achieving the Sustainable Development Goals We invite you to the online discussion "The Role of AI in Achieving the Sus...
+
+
+          https://www.meetup.com/machine-learning-meetup-brno/events/285343994/'
+        location: Online event
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_285343994@meetup.com
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/285343994/
+        dtstart: 2022-04-19 16:00:00+02:00
+        dtend: 2022-04-19 18:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jan 27, 6:00 PM  CET: Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning)
+
+
+        Abstract
+
+        Speech data is notoriously difficult to work'
+      og_title: 'MLMU Online #18: Voice processing revolution: The future is now!, Thu, Jan 27, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/machine-learning-meetup-brno/events/283360072/
+      ical:
+        summary: 'MLMU Online #18: Voice processing revolution: The future is now!'
+        description: 'Machine Learning Meetup Brno
+
+          Thursday, January 27 at 6:00 PM
+
+
+          Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning) AbstractSpeech data is notorious...
+
+
+          https://www.meetup.com/machine-learning-meetup-brno/events/283360072/'
+        location: Online event
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_283360072@meetup.com
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/283360072/
+        dtstart: 2022-01-27 18:00:00+01:00
+        dtend: 2022-01-27 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Jan 19, 6:00 PM  CET: DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism
+
+
+        We invite you to the online discussion AI as a New Frontier for Journalism: W'
+      og_title: D<AI>DALOS – AI as a New Frontier for Journalism, Wed, Jan 19, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/machine-learning-meetup-brno/events/283095380/
+      ical:
+        summary: D<AI>DALOS – AI as a New Frontier for Journalism
+        description: 'Machine Learning Meetup Brno
+
+          Wednesday, January 19 at 6:00 PM
+
+
+          DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism We invite you to the online discussion AI as a New Front...
+
+
+          https://www.meetup.com/machine-learning-meetup-brno/events/283095380/'
+        location: Online event
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_283095380@meetup.com
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/283095380/
+        dtstart: 2022-01-19 18:00:00+01:00
+        dtend: 2022-01-19 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Dec 14, 6:00 PM  CET: The talks will be live on YouTube. (Link will get displayed after you RSVP)
+
+
+        Talk #1: How we use simple models to improve intent matching (Tomáš Vodrážka, Feedyou)
+
+
+        Abstrac'
+      og_title: 'MLMU Online #17: Building Chatbots in Practice and Lessons Learned, Tue, Dec 14, 2021, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/machine-learning-meetup-brno/events/282546299/
+      ical:
+        summary: 'MLMU Online #17: Building Chatbots in Practice and Lessons Learned'
+        description: 'Machine Learning Meetup Brno
+
+          Tuesday, December 14 at 6:00 PM
+
+
+          The talks will be live on YouTube. (Link will get displayed after you RSVP) Talk #1: How we use simple models to improve intent matching (Tomáš Vodráž...
+
+
+          https://www.meetup.com/machine-learning-meetup-brno/events/282546299/'
+        location: Online event
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_282546299@meetup.com
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/282546299/
         dtstart: 2021-12-14 18:00:00+01:00
         dtend: 2021-12-14 20:00:00+01:00
   - meetupcom:
@@ -7930,118 +8032,28 @@ series:
         dtstart: 2021-12-14 18:00:00+01:00
         dtend: 2021-12-14 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 19, 4:00 PM  CEST: # DAIDALOS – The Role of AI in Achieving the Sustainable Development Goals
-
-
-        We invite you to the online discussion "The Role of AI in Achieving the Sustainable Development '
-      og_title: D<AI>DALOS – Role of AI in Achieving The Sustainable Development Goals, Tue, Apr 19, 2022, 4:00 PM   | Meetup
-      url: https://www.meetup.com/machine-learning-meetup-brno/events/285343994/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
-        summary: D<AI>DALOS – Role of AI in Achieving The Sustainable Development Goals
+        summary: 'Brno.AI meetup: AI, Data & Regulace'
         description: 'Machine Learning Meetup Brno
 
-          Tuesday, April 19 at 4:00 PM
+          Tuesday, June 21 at 4:00 PM
+
+          \nZveme vás ve spolupráci s brno.ai na offline meetup AI, Data & Regulace.**Prosím, PŘIHLAŠUJTE SE K ÚČASTI ZDE: (https://forms.gle/Fjampyz1wnnMeDyEA" c...
 
 
-          # DAIDALOS – The Role of AI in Achieving the Sustainable Development Goals We invite you to the online discussion "The Role of AI in Achieving the Sus...
-
-
-          https://www.meetup.com/machine-learning-meetup-brno/events/285343994/'
-        location: Online event
+          https://www.meetup.com/machine-learning-meetup-brno/events/286553337/'
+        location: Clubco (Vlnena 5, Brno-Brno-střed, Czech Republic 602 00)
         geo:
           lat: 49.2
           lon: 16.61
         status: CONFIRMED
-        uid: event_285343994@meetup.com
-        url: https://www.meetup.com/machine-learning-meetup-brno/events/285343994/
-        dtstart: 2022-04-19 16:00:00+02:00
-        dtend: 2022-04-19 18:00:00+02:00
-  - meetupcom:
-      meta_description: 'Thu, Jan 27, 6:00 PM  CET: Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning)
-
-
-        Abstract
-
-        Speech data is notoriously difficult to work'
-      og_title: 'MLMU Online #18: Voice processing revolution: The future is now!, Thu, Jan 27, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/machine-learning-meetup-brno/events/283360072/
-      ical:
-        summary: 'MLMU Online #18: Voice processing revolution: The future is now!'
-        description: 'Machine Learning Meetup Brno
-
-          Thursday, January 27 at 6:00 PM
-
-
-          Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning) AbstractSpeech data is notorious...
-
-
-          https://www.meetup.com/machine-learning-meetup-brno/events/283360072/'
-        location: Online event
-        geo:
-          lat: 49.2
-          lon: 16.61
-        status: CONFIRMED
-        uid: event_283360072@meetup.com
-        url: https://www.meetup.com/machine-learning-meetup-brno/events/283360072/
-        dtstart: 2022-01-27 18:00:00+01:00
-        dtend: 2022-01-27 20:00:00+01:00
-  - meetupcom:
-      meta_description: 'Wed, Jan 19, 6:00 PM  CET: DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism
-
-
-        We invite you to the online discussion AI as a New Frontier for Journalism: W'
-      og_title: D<AI>DALOS – AI as a New Frontier for Journalism, Wed, Jan 19, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/machine-learning-meetup-brno/events/283095380/
-      ical:
-        summary: D<AI>DALOS – AI as a New Frontier for Journalism
-        description: 'Machine Learning Meetup Brno
-
-          Wednesday, January 19 at 6:00 PM
-
-
-          DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism We invite you to the online discussion AI as a New Front...
-
-
-          https://www.meetup.com/machine-learning-meetup-brno/events/283095380/'
-        location: Online event
-        geo:
-          lat: 49.2
-          lon: 16.61
-        status: CONFIRMED
-        uid: event_283095380@meetup.com
-        url: https://www.meetup.com/machine-learning-meetup-brno/events/283095380/
-        dtstart: 2022-01-19 18:00:00+01:00
-        dtend: 2022-01-19 20:00:00+01:00
-  - meetupcom:
-      meta_description: 'Tue, Dec 14, 6:00 PM  CET: The talks will be live on YouTube. (Link will get displayed after you RSVP)
-
-
-        Talk #1: How we use simple models to improve intent matching (Tomáš Vodrážka, Feedyou)
-
-
-        Abstrac'
-      og_title: 'MLMU Online #17: Building Chatbots in Practice and Lessons Learned, Tue, Dec 14, 2021, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/machine-learning-meetup-brno/events/282546299/
-      ical:
-        summary: 'MLMU Online #17: Building Chatbots in Practice and Lessons Learned'
-        description: 'Machine Learning Meetup Brno
-
-          Tuesday, December 14 at 6:00 PM
-
-
-          The talks will be live on YouTube. (Link will get displayed after you RSVP) Talk #1: How we use simple models to improve intent matching (Tomáš Vodráž...
-
-
-          https://www.meetup.com/machine-learning-meetup-brno/events/282546299/'
-        location: Online event
-        geo:
-          lat: 49.2
-          lon: 16.61
-        status: CONFIRMED
-        uid: event_282546299@meetup.com
-        url: https://www.meetup.com/machine-learning-meetup-brno/events/282546299/
-        dtstart: 2021-12-14 18:00:00+01:00
-        dtend: 2021-12-14 20:00:00+01:00
+        uid: event_286553337@meetup.com
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/286553337/
+        dtstart: 2022-06-21 16:00:00+02:00
+        dtend: 2022-06-21 18:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
