--- a/data/sources/microsoft-events-prague.yaml
+++ b/data/sources/microsoft-events-prague.yaml
@@ -6922,9 +6922,9 @@ series:
         dtstart: 2019-06-17 16:30:00+02:00
         dtend: 2019-06-17 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Sep 22, 5:00 PM  CEST: Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your home life, and making '
-      og_title: TechBaby Prague (Virtual Event), Wed, Sep 22, 2021, 5:00 PM   | Meetup
-      url: https://www.meetup.com/microsoft-events-in-prague/events/280766905/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: TechBaby Prague (Virtual Event)
         description: 'Microsoft Events in Prague
@@ -6946,12 +6946,9 @@ series:
         dtstart: 2021-09-22 17:00:00+02:00
         dtend: 2021-09-22 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Dec 3, 6:30 PM  CET: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)
-
-
-        Hello '
-      og_title: Office 365 Champions & User Group Connection in Prague, Tue, Dec 3, 2019, 6:30 PM   | Meetup
-      url: https://www.meetup.com/microsoft-events-in-prague/events/266913890/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Office 365 Champions & User Group Connection in Prague
         description: 'Microsoft Events in Prague
@@ -6973,12 +6970,9 @@ series:
         dtstart: 2019-12-03 18:30:00+01:00
         dtend: 2019-12-03 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Sep 26, 5:20 PM  CEST: Save the date and register for our upcoming startup community event.
-
-
-        We are excited to invite you to our second Prague Startup Day organized by Microsoft. You can look for'
-      og_title: Prague Startup Day 2019, Thu, Sep 26, 2019, 5:20 PM   | Meetup
-      url: https://www.meetup.com/microsoft-events-in-prague/events/264424128/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Prague Startup Day 2019
         description: 'Microsoft Events in Prague
@@ -7000,12 +6994,9 @@ series:
         dtstart: 2019-09-26 17:20:00+02:00
         dtend: 2019-09-26 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Jun 17, 4:30 PM  CEST: The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.
-
-
-        Summer is here and it''s time to slow d'
-      og_title: Startup BBQ 2019 on rooftop, Mon, Jun 17, 2019, 4:30 PM   | Meetup
-      url: https://www.meetup.com/microsoft-events-in-prague/events/261799526/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Startup BBQ 2019 on rooftop
         description: 'Microsoft Events in Prague
