--- a/data/sources/gcdc-prague.yaml
+++ b/data/sources/gcdc-prague.yaml
@@ -7018,16 +7018,9 @@ series:
         dtstart: 2020-10-07 18:30:00+02:00
         dtend: 2020-10-07 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, May 19, 6:30 PM  CEST: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o tom jak s GCP začít]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme př'
-      og_title: Cloud Talks vol.7 {Jak začít s GCP}, Wed, May 19, 2021, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gcdc-prague/events/276944440/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Cloud Talks vol.7 {Jak začít s GCP}
         description: 'Google Cloud Developer Community Prague
@@ -7049,16 +7042,9 @@ series:
         dtstart: 2021-05-19 18:30:00+02:00
         dtend: 2021-05-19 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Mar 3, 6:30 PM  CET: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o K8s]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setk'
-      og_title: Cloud Talks vol.6 {Kubernetes}, Wed, Mar 3, 2021, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gcdc-prague/events/274666372/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Cloud Talks vol.6 {Kubernetes}
         description: 'Google Cloud Developer Community Prague
@@ -7080,16 +7066,9 @@ series:
         dtstart: 2021-03-03 18:30:00+01:00
         dtend: 2021-03-03 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Nov 11, 6:30 PM  CET: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o Serverless Computing]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme p'
-      og_title: Cloud Talks vol.5 {Serverless Computing}, Wed, Nov 11, 2020, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gcdc-prague/events/273622225/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Cloud Talks vol.5 {Serverless Computing}
         description: 'Google Cloud Developer Community Prague
@@ -7111,16 +7090,9 @@ series:
         dtstart: 2020-11-11 18:30:00+01:00
         dtend: 2020-11-11 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Oct 7, 6:30 PM  CEST: [Pojďme se potkat online a nasdílet zkušenosti o práci s daty]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání na'
-      og_title: Cloud Talks vol.4 {Data}, Wed, Oct 7, 2020, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gcdc-prague/events/272110257/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Cloud Talks vol.4 {Data}
         description: 'Google Cloud Developer Community Prague
