--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -6664,3 +6664,54 @@ series:
         url: https://www.meetup.com/asociace-ux/events/285416490/
         dtstart: 2022-05-05 19:00:00+02:00
         dtend: 2022-05-05 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Aug 2, 5:30 PM  CEST: Hey designers! Let''s enjoy the summer sunshine and meet somewhere outdoors :)
+
+
+        UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discus'
+      og_title: UX Meetup Brno in August, Tue, Aug 2, 2022, 5:30 PM   | Meetup
+      url: https://www.meetup.com/asociace-ux/events/287212247/
+      ical:
+        summary: UX Meetup Brno in August
+        description: 'Asociace UX
+
+          Tuesday, August 2 at 5:30 PM
+
+
+          Hey designers! Let''s enjoy the summer sunshine and meet somewhere outdoors :) UX dinner is a meeting of the UX community in Brno. You can expect an in...
+
+
+          https://www.meetup.com/asociace-ux/events/287212247/'
+        location: Žardán (Hlídka 208/2, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287212247@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/287212247/
+        dtstart: 2022-08-02 17:30:00+02:00
+        dtend: 2022-08-02 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: UX Picnic Brno in July
+        description: 'Asociace UX
+
+          Wednesday, July 13 at 5:30 PM
+
+
+          Hey designers! Let''s enjoy the summer sunshine and meet somewhere outdoors :) UX dinner is a meeting of the UX community in Brno. You can expect an in...
+
+
+          https://www.meetup.com/asociace-ux/events/286756774/'
+        location: Tyršův sad (Tyršův sad, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286756774@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/286756774/
+        dtstart: 2022-07-13 17:30:00+02:00
+        dtend: 2022-07-13 20:30:00+02:00
